--- a/GearJuJu/Base.lproj/LaunchScreen.storyboard
+++ b/GearJuJu/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +18,38 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back_lyon" translatesAutoresizingMaskIntoConstraints="NO" id="ovb-hD-X89">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_logo" translatesAutoresizingMaskIntoConstraints="NO" id="nay-1U-L7v">
+                                <rect key="frame" x="16" y="303" width="343" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="nay-1U-L7v" secondAttribute="height" multiplier="343:60" id="TvC-O9-F9F"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="nay-1U-L7v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="01k-ua-Iii"/>
+                            <constraint firstItem="ovb-hD-X89" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9Me-XL-YJY"/>
+                            <constraint firstItem="nay-1U-L7v" firstAttribute="centerX" secondItem="ovb-hD-X89" secondAttribute="centerX" id="GHg-mr-lNu"/>
+                            <constraint firstItem="nay-1U-L7v" firstAttribute="centerY" secondItem="ovb-hD-X89" secondAttribute="centerY" id="Nxi-Q3-ozP"/>
+                            <constraint firstItem="ovb-hD-X89" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="O6H-uQ-9Y7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nay-1U-L7v" secondAttribute="trailing" constant="16" id="hMo-e8-ekC"/>
+                            <constraint firstItem="ovb-hD-X89" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="n1E-mJ-hpV"/>
+                            <constraint firstItem="ovb-hD-X89" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wcu-7f-4Fo"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="back_lyon" width="375" height="667"/>
+        <image name="main_logo" width="343" height="59"/>
+    </resources>
 </document>
